[bugfix] fix line height of text editors so that underlines aren't covered

--- a/src/features/blocks/Blocks.css
+++ b/src/features/blocks/Blocks.css
@@ -85,7 +85,7 @@
   max-width: 30em;
   overflow: hidden;
   min-height: 2em;
-  line-height: 1.1em;
+  line-height: 1.4em;
   font-family: taamey frank, adobe-garamond-pro, crimson text, Georgia,
     times new roman, serif;
   direction: rtl;
